--- a/assets/css/cardapio.css
+++ b/assets/css/cardapio.css
@@ -1,7 +1,12 @@
-.cartao-lanche {
-    /*display: none;*/
+.carousel {
+    display: none;
     box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
     border-radius: 10px;
+    width: 500px;
+    height: 400px;
+}
+
+.cartao-lanche {
     width: 500px;
 }
 
@@ -30,15 +35,18 @@
 }
 
 .cartao-lanche .cartao-imagem{
-    width: 250px;
-    height: 250px;
+    margin: 0 auto;
+    width: 420px;
+    height: 270px;
+    padding-top: 20px;
 }
 
 .cartao-lanche img{
     max-height: 100%;
+    max-width: 100%;
 }
 
-.cartao-lanche .aberto{
+.cartao-lanche.aberto{
     display: block;
 }
 
