--- a/assets/css/carousel.css
+++ b/assets/css/carousel.css
@@ -1,5 +1,9 @@
 .carousel {
     display: flex;
+    box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+    border-radius: 10px;
+    width: 500px;
+    height: 400px;
 }
 
 .cartao-wrapper {
