--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -13,7 +13,7 @@ main {
     display: flex;
     align-items: center;
     justify-content: center;
-    background-color: #DADFE8;
+    background-color: #d1cab0;
 }
 
 .global {
