--- a/assets/css/carousel.css
+++ b/assets/css/carousel.css
@@ -1,15 +1,16 @@
 .carousel {
     display: flex;
-    box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
-    border-radius: 10px;
-    width: 500px;
-    height: 400px;
+    width: 538px;
+    height: 500px;
+    padding-bottom: 30px;
 }
 
 .cartao-wrapper {
     display: flex;
     overflow-x: auto;
     flex-flow: row nowrap;
+    gap: 30px;
+    padding: 15px;
 }
 
 .cartao-lanche {
