--- a/assets/css/opcoes.css
+++ b/assets/css/opcoes.css
@@ -1,5 +1,6 @@
 .opcoes {
     max-width: 200px;
+    padding-top: 15px;
 }
 
 .opcoes .botao {
@@ -14,7 +15,7 @@
     border-top-left-radius: 30px;
     border-bottom-left-radius: 30px;
     min-height: 70px;
-    box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+    box-shadow: rgba(0, 0, 0, 0.5) 0px 7px 29px 0px;
     transition: 0.15s ease-in-out;
 }
 
