--- a/assets/css/carousel.css
+++ b/assets/css/carousel.css
@@ -1,7 +1,7 @@
 .carousel {
     display: flex;
-    width: 538px;
-    height: 500px;
+    width: 510px;
+    height: 750px;
     padding-bottom: 30px;
 }
 
@@ -10,9 +10,33 @@
     overflow-x: auto;
     flex-flow: row nowrap;
     gap: 30px;
-    padding: 15px;
+    padding: 0 15px 15px 15px;
 }
 
 .cartao-lanche {
     flex-shrink: 0;
+}
+
+.arrow-left, .arrow-right {
+    position: absolute;
+    cursor: pointer;
+    font-size: 35px;
+    margin: 15px;
+    left: 370px;
+    line-height: 420px;
+    background: transparent;
+    color: rgba(0, 0, 0, 0.5);
+    border: none;
+}
+
+.arrow-left:hover, .arrow-right:hover {
+    color: rgba(0,0,0);
+}
+
+.arrow-left {
+    transform: scalex(-1);
+}
+
+.arrow-right {
+    left: 810px;
 }
