--- a/assets/css/cardapio.css
+++ b/assets/css/cardapio.css
@@ -1,3 +1,7 @@
+@import url('https://fonts.googleapis.com/css2?family=Lato:wght@100;300&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Lato:wght@100;300;400&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=EB+Garamond&family=Fredoka+One&display=swap');
+
 .cartao-lanche {
     width: 480px;
     box-shadow: rgba(0,0,0, 0.5) 0px 7px 20px 0px;
@@ -13,16 +17,17 @@
 }
 
 .cartao-lanche .tipo{
+    font-family: 'Fredoka One', cursive;
     font-size: 12px;
     background-color: #fff;
     opacity: 0.7;
     border-radius: 10px;
     padding: 2px 10px;
-    font-weight: bold;
     box-shadow: 4px -4px 1em rgb(92, 88, 88);
 }
 
 .cartao-lanche .detalhes{
+    font-family: 'Fredoka One', cursive;
     color: #fff;
     display: flex;
     justify-content: space-between;
@@ -42,19 +47,22 @@
 }
 
 .cartao-lanche .cartao-informacoes {
+    font-family: 'Lato', sans-serif;
     background-color: #fff;
-    padding: 80px 30px 31px;
+    padding: 80px 30px 0;
+    height: 438px;
     margin-top: -70px;
     border-bottom-left-radius: 8px;
     border-bottom-right-radius: 8px;
 }
 
 .cartao-lanche .cartao-informacoes .titulo-valor {
+    font-family: 'Fredoka One', cursive;
     text-align: center;
-    font-size: 50px;
+    font-size: 40px;
     font-weight: bold;
-    margin-top: -40px;
-    padding: 10px 0 20px 0;
+    margin-top: -45px;
+    padding: 10px 0 15px 0;
 }
 
 .cartao-lanche .cartao-informacoes .descricao-do-lanche {
@@ -66,11 +74,21 @@
 .cartao-lanche .coluna-de-informacoes {
     display: flex;
     justify-content: space-between;
-    padding: 20px 70px 0 70px;
+    padding: 20px 50px 0 50px;
 }
 
-.cartao-lanche .coluna-de-informacoes .quantidade-valor h3, .adicionais h3 {
+.cartao-lanche .coluna-de-informacoes .quantidade-valor h4, .adicionais h4 {
     padding-bottom: 10px;
+}
+
+.cartao-lanche .coluna-de-informacoes .quantidade h4 {
+    padding-bottom: 7px;
+    text-align: center;
+}
+
+.cartao-lanche .coluna-de-informacoes .combobox-texto {
+    width: 100%;
+    text-align: center;
 }
 
 .cartao-lanche .combobox-texto, .opcoes-adicionais {
@@ -78,12 +96,35 @@
     padding-bottom: 5px;
 }
 
-.cartao-lanche .combobox-texto #number-value {
+.cartao-lanche .combobox {
+    list-style: none;
+    padding-bottom: 3px;
+}
+
+.cartao-lanche .combobox-texto, .combobox #number-value {
     width: 50px;
 }
 
 .cartao-lanche .combobox-texto p {
     display: inline;
+}
+
+.cartao-lanche .cartao-informacoes .comprar {
+    border: none;
+    cursor: pointer;
+    color: white;
+    font-family: 'Fredoka One', cursive;
+    font-size: 18px;
+    width: 250px;
+    height: 30px;
+    margin-top: 20px;
+    margin-left: 80px;
+    border-radius: 10px;
+    box-shadow: 4px -4px 1em rgb(92, 88, 88, 0.8);
+}
+
+.cartao-lanche .cartao-informacoes .comprar:hover {
+    transform: scale(1.2);
 }
 
 .cardapio-opcoes.aberto{
