Button transition by JavaScript working

--- a/assets/css/carousel.css
+++ b/assets/css/carousel.css
@@ -5,6 +5,11 @@
     padding-bottom: 30px;
 }
 
+.carousel.aberto{
+    display: block;
+}
+
+
 .cartao-wrapper {
     display: flex;
     overflow-x: auto;
