--- a/assets/css/cardapio.css
+++ b/assets/css/cardapio.css
@@ -105,6 +105,10 @@
     width: 50px;
 }
 
+input[type=number]::-webkit-inner-spin-button {
+    opacity: 1;
+  }
+
 .cartao-lanche .combobox-texto p {
     display: inline;
 }
