--- a/assets/css/carousel.css
+++ b/assets/css/carousel.css
@@ -2,7 +2,7 @@
     display: none;
     width: 510px;
     height: 790px;
-    padding-bottom: 30px;
+    position: relative;
 }
 
 .carousel.aberto{
@@ -18,6 +18,16 @@
     padding: 0 15px 15px 15px;
 }
 
+.cartao-wrapper::-webkit-scrollbar {
+    display: none;
+}
+
+/* Hide scrollbar for IE, Edge and Firefox */
+.cartao-wrapper {
+    -ms-overflow-style: none;  /* IE and Edge */
+    scrollbar-width: none;  /* Firefox */
+}
+
 .cartao-lanche {
     flex-shrink: 0;
 }
@@ -26,10 +36,10 @@
     position: absolute;
     cursor: pointer;
     font-size: 35px;
-    margin: 15px;
-    left: 370px;
-    margin-top: 340px;
-    margin-left: 40px;
+    top: 0;
+    left: 70px;
+    right: auto;
+    bottom: 73px;
     background: transparent;
     color: rgba(0, 0, 0, 0.5);
     border: none;
@@ -44,5 +54,6 @@
 }
 
 .arrow-right {
-    left: 760px;
+    left: auto;
+    right: 70px;
 }
