--- a/assets/css/cardapio.css
+++ b/assets/css/cardapio.css
@@ -6,6 +6,11 @@
     width: 480px;
     box-shadow: rgba(0,0,0, 0.5) 0px 7px 20px 0px;
     border-radius: 10px;
+    display: none;
+}
+
+.cartao-lanche.current-item {
+    display: block;
 }
 
 .cartao-lanche .cartao-topo{
