--- a/assets/css/carousel.css
+++ b/assets/css/carousel.css
@@ -33,10 +33,8 @@
 .arrow-left, .arrow-right {
     position: absolute;
     cursor: pointer;
-    font-size: 35px;
-    top: 335px;
-    left: 90px;
-    right: auto;
+    font-size: 40px;
+    font-weight: bold;
     background: transparent;
     color: rgba(0, 0, 0, 0.5);
     border: none;
@@ -47,10 +45,14 @@
 }
 
 .arrow-left {
-    transform: scalex(-1);
+    top: 50%;
+    left: 50%;
+    transform: translate(-500%, -75%);
 }
 
 .arrow-right {
     left: auto;
-    right: 90px;
+    top: 50%;
+    right: 50%;
+    transform: translate(500%, -75%);
 }
