--- a/assets/css/cardapio.css
+++ b/assets/css/cardapio.css
@@ -3,7 +3,8 @@
 @import url('https://fonts.googleapis.com/css2?family=EB+Garamond&family=Fredoka+One&display=swap');
 
 .cartao-lanche {
-    width: 480px;
+    width: 100%;
+    max-width: 480px;
     box-shadow: rgba(0,0,0, 0.5) 0px 7px 20px 0px;
     border-radius: 10px;
     display: none;
@@ -116,6 +117,8 @@ input[type=number]::-webkit-inner-spin-button {
 }
 
 .cartao-lanche .cartao-informacoes .comprar {
+    display: block;
+    margin: 0 auto;
     border: none;
     cursor: pointer;
     color: white;
@@ -124,7 +127,6 @@ input[type=number]::-webkit-inner-spin-button {
     width: 250px;
     height: 30px;
     margin-top: 20px;
-    margin-left: 80px;
     border-radius: 10px;
     box-shadow: 4px -4px 1em rgb(92, 88, 88, 0.8);
 }
